# ksbh

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  README.md
.forgejo/actions/install-playwright/: action.yml
.forgejo/actions/run-mise-task/: action.yml
.forgejo/actions/setup-mise/: action.yml
.forgejo/workflows/: ci-base-image.yaml  ci.yaml
charts/ksbh/: Chart.yaml  values.yaml
charts/ksbh/crds/: moduleconfigurations.modules.ksbh.rs.yaml
charts/ksbh/templates/: NOTES.txt  (+9 more)
crates/: AGENTS.md  Cargo.toml  rust-toolchain.toml
crates/.cargo/: config.toml
crates/ksbh-bin/: AGENTS.md  Cargo.toml  askama.toml
crates/ksbh-bin/src/: main.rs  profiling.rs  server.rs
crates/ksbh-bin/src/apps/: mod.rs
crates/ksbh-bin/src/apps/static_content/: errors.rs  file_cache.rs  html.rs  mod.rs  templates.rs
crates/ksbh-bin/src/proxy/: mod.rs
crates/ksbh-bin/src/proxy/proxy_service/: mod.rs
crates/ksbh-bin/src/services/: mod.rs
crates/ksbh-bin/src/services/metrics/: mod.rs
crates/ksbh-bin/src/services/proxy/: early_request_filter.rs  mod.rs  request_filter.rs
crates/ksbh-bin/src/tls/: mod.rs
crates/ksbh-config-providers/file/: AGENTS.md  Cargo.toml
crates/ksbh-config-providers/file/src/: lib.rs
crates/ksbh-config-providers/file/src/config/: ingress.rs  mod.rs  modules.rs
crates/ksbh-config-providers/file/src/provider/: mod.rs
crates/ksbh-config-providers/file/src/test_utils/: mod.rs
crates/ksbh-config-providers/kubernetes/: AGENTS.md  Cargo.toml
crates/ksbh-config-providers/kubernetes/src/: ingress.rs  lib.rs
crates/ksbh-config-providers/kubernetes/src/provider/: controller_error.rs  mod.rs  module_controller.rs
crates/ksbh-config-providers/kubernetes/src/provider/ingress_controller/: annotations.rs  mod.rs  reconcile_ingress.rs  rules.rs  tls.rs
crates/ksbh-core/: AGENTS.md  Cargo.toml  wasm.config.toml
crates/ksbh-core/src/: certs.rs  config.rs  constants.rs  lib.rs
crates/ksbh-core/src/config_provider/: mod.rs
crates/ksbh-core/src/cookies/: mod.rs
crates/ksbh-core/src/metrics/: mod.rs  module_metric.rs  prom.rs  runtime_state.rs
crates/ksbh-core/src/modules/: mod.rs  registry.rs
crates/ksbh-core/src/modules/abi/: error.rs  host_functions.rs  log.rs  macros.rs  mod.rs  module_buffer.rs  module_context.rs  module_host.rs  module_instance.rs  module_request_context.rs  module_request_info.rs  module_response.rs
crates/ksbh-core/src/proxy/: mod.rs  service.rs  service_early_request_filter.rs  service_request_filter.rs  test_utils.rs
crates/ksbh-core/src/routing/: hosts.rs  ingress.rs  ingress_module_config.rs  mod.rs  path_type.rs  request_match.rs  router.rs  service_backend.rs
crates/ksbh-core/src/routing/router/: mod.rs  router_reader.rs  router_writer.rs  tests.rs
crates/ksbh-core/src/storage/: mod.rs  module_session_key.rs  redis_hashmap.rs  test_utils.rs
crates/ksbh-core/src/utils/: mod.rs
crates/ksbh-core/tests/: host_functions_unhappy.rs  module_host_dynamic.rs
crates/ksbh-modules-sdk/: AGENTS.md  Cargo.toml
crates/ksbh-modules-sdk/proptest-regressions/ffi/: mod.txt
crates/ksbh-modules-sdk/src/: context.rs  error.rs  lib.rs  logger.rs  metrics.rs  result.rs  session.rs  types.rs
crates/ksbh-modules-sdk/src/ffi/: mod.rs
crates/ksbh-modules-sdk/tests/: ffi_miri.rs
crates/ksbh-modules/http_to_https/: AGENTS.md  Cargo.toml
crates/ksbh-modules/http_to_https/src/: lib.rs
crates/ksbh-modules/oidc/: AGENTS.md  Cargo.toml
crates/ksbh-modules/oidc/src/: error.rs  lib.rs
crates/ksbh-modules/proof-of-work/: AGENTS.md  Cargo.toml  askama.toml
crates/ksbh-modules/proof-of-work/src/: early_request_filter.rs  errors.rs  lib.rs  templates.rs
crates/ksbh-modules/proof-of-work/src/html/: shitty_redirect.html
crates/ksbh-modules/proof-of-work/templates/: base.html  challenge.html
crates/ksbh-modules/rate-limit/: AGENTS.md  Cargo.toml
crates/ksbh-modules/rate-limit/src/: lib.rs
crates/ksbh-modules/robots-txt/: AGENTS.md  Cargo.toml  build.rs
crates/ksbh-modules/robots-txt/src/: lib.rs
crates/ksbh-modules/test-modules/dynamic-ffi-smoke/: AGENTS.md  Cargo.toml
crates/ksbh-modules/test-modules/dynamic-ffi-smoke/src/: lib.rs
crates/ksbh-types/: AGENTS.md  Cargo.toml
crates/ksbh-types/src/: ksbh_str.rs  lib.rs
crates/ksbh-types/src/providers/: mod.rs
crates/ksbh-types/src/providers/proxy/: mod.rs  peer_options.rs  test_utils.rs
crates/ksbh-types/src/requests/: http_context.rs  http_method.rs  http_query.rs  http_response.rs  http_scheme.rs  mod.rs
crates/ksbh-types/src/requests/http_request/: error.rs  mod.rs
crates/ksbh-ui/: AGENTS.md  Cargo.toml
crates/ksbh-ui/src/: error_pages.rs  lib.rs
crates/ksbh-ui/static/css/: shared.css  style.css
crates/ksbh-ui/templates/components/: footer.html  topbar.html
crates/ksbh-ui/templates/layouts/: base.html  minimal.html
crates/ksbh-ui/templates/pages/: error.html
crates/tests/: .miri.toml  AGENTS.md  Cargo.toml
crates/tests/src/: binary.rs  lib.rs
crates/tests/tests/: binary_authentik_flow_e2e.rs  binary_baseline_e2e.rs  binary_static_content_e2e.rs  binary_upstream_errors_e2e.rs  k8s_baseline_e2e.rs  k8s_http_to_https_e2e.rs  k8s_ingress_lifecycle_e2e.rs  k8s_pow_http_e2e.rs  k8s_robots_txt_e2e.rs  k8s_static_content_e2e.rs  k8s_trusted_proxies_e2e.rs  k8s_websocket_e2e.rs
crates/tests/tests/common/: mod.rs
docs/: AGENTS.md  deno.json  package.json
docs/.config/: dodeca.styx
docs/content/: _index.md
docs/css/: base.css
docs/data/: docs_sidebar.yaml
docs/scripts/: build-css.ts
docs/templates/: base.html  index.html  page.html  section.html
mise-tasks/: build  build-charts-site-image  build-css  build-docs-site  build-docs-site-image  build-helm-repo  build-release-image  clean-kind  dynamic-modules-smoke  e2e  e2e-authentik  e2e-authentik-provider  e2e-binary  e2e-file-provider  e2e-kubernetes-provider  lib.sh  lint-helm-chart  miri-modules-sdk-ffi  p0-unhappy-tests  package-helm-chart  run-kind  run-pow
tests/kind/: cluster-ci.yaml
tests/playwright/: k8s-pow-browser.spec.cjs  package-lock.json  package.json
(+28 files in other folders)
