[workspace]
resolver = "3"
members = [
  "ksbh-bin",
  "ksbh-core",
  "ksbh-modules-sdk",
  "ksbh-modules/http_to_https",
  "ksbh-modules/oidc",
  "ksbh-modules/proof-of-work",
  "ksbh-modules/rate-limit",
  "ksbh-modules/robots-txt",
  "ksbh-types",
  "ksbh-config-providers/kubernetes",
  "ksbh-config-providers/file",
  "tests",
]

[workspace.dependencies]
async-trait = "0.1.88"
hashbrown = "0.16.1"
ksbh-types = { path = "./ksbh-types/" }
scc = "3.4.10"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = [
  "env-filter",
  "tracing-log",
] }
arc-swap = "1.8.2"

# Testing dependencies
proptest = "1.5"
criterion = "0.5"
testcontainers = "0.23"

[workspace.dependencies.askama]
version = "0.15.4"
default-features = false
features = ["default"]

[workspace.dependencies.base64]
version = "0.22.1"

[workspace.dependencies.bincode]
version = "2.0.1"

[workspace.dependencies.blake3]
version = "1.8.2"
default-features = false

[workspace.dependencies.bytes]
version = "1.11.0"

[workspace.dependencies.chrono]
version = "0.4.42"

[workspace.dependencies.extism]
version = "1.13.0"

[workspace.dependencies.extism-pdk]
version = "1.4.1"
features = ["protobuf"]

[workspace.dependencies.hex]
version = "0.4.3"

[workspace.dependencies.http]
version = "1.0.0"
features = ["std"]

[workspace.dependencies.k8s-openapi]
version = "0.26.1"
features = ["latest", "schemars"]

[workspace.dependencies.kube]
version = "2.0.1"
features = ["client", "derive", "runtime"]

[workspace.dependencies.pingora]
version = "0.7.0"
features = ["cache", "lb", "openssl", "time"]

[workspace.dependencies.pingora-http]
version = "0.7.0"

[workspace.dependencies.pingora-runtime]
version = "0.7.0"

[workspace.dependencies.redis]
version = "1.0.2"
features = ["tokio-comp"]

[workspace.dependencies.rkyv]
version = "0.8.15"

[workspace.dependencies.rmp-serde]
version = "1.3.1"

[workspace.dependencies.schemars]
version = "1.1.0"

[workspace.dependencies.serde]
version = "1.0.228"
default-features = false
features = ["derive"]

[workspace.dependencies.serde_json]
version = "1.0.149"
default-features = false

[workspace.dependencies.sha2]
version = "0.10.9"

[workspace.dependencies.smol_str]
version = "0.3.5"
features = ["serde"]

[workspace.dependencies.testfile]
version = "0.1.5"

[workspace.dependencies.tikv-jemallocator]
version = "0.6.1"

[workspace.dependencies.tokio]
version = "1.49.0"
features = ["full"]

[workspace.dependencies.tracing-appender]
version = "0.2.4"

[workspace.dependencies.uuid]
version = "1.19.0"
default-features = false
features = ["fast-rng", "macro-diagnostics", "serde", "v4", "v5", "v6"]
