[package]
name = "ksbh"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ksbh"
path = "src/main.rs"

[dependencies]
async-compression = { version = "0.4.37", features = ["all", "tokio"] }
async-trait = { workspace = true }
bytes = { workspace = true }
hashbrown = { workspace = true }
http = { workspace = true }
http_to_https = { path = "../ksbh-modules/http_to_https/" }
httpdate = "1.0.3"
jemalloc_pprof = { version = "0.8.1", optional = true }
ksbh-config-providers-file = { path = "../ksbh-config-providers/file" }
ksbh-config-providers-kubernetes = { path = "../ksbh-config-providers/kubernetes" }
ksbh-core = { path = "../ksbh-core" }
ksbh-types = { workspace = true }
memmap2 = "0.9.9"
mime_guess = "2.0.5"
oidc = { path = "../ksbh-modules/oidc/" }
pingora = { workspace = true }
pingora-runtime = { workspace = true }
# KSBH
proof-of-work = { path = "../ksbh-modules/proof-of-work/" }
# Profiling
pyroscope = { version = "0.5.8", optional = true }
pyroscope_pprofrs = { version = "0.2.10", optional = true }
rate-limit = { path = "../ksbh-modules/rate-limit/" }
redis = { workspace = true }
robots-txt = { path = "../ksbh-modules/robots-txt/" }
scc = { workspace = true }
schemars = { workspace = true }
# Parsing deps
serde = { workspace = true }
serde_json = { workspace = true }
smol_str = { workspace = true }
tikv-jemallocator = { workspace = true }
tokio = { workspace = true }
# Logging
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-log = "0.2"
tracing-subscriber = { workspace = true }
urlencoding = "2.1.3"
uuid = { workspace = true }

[dependencies.anyhow]
version = "1.0.97"

# Internal
[dependencies.askama]
workspace = true

[dependencies.futures]
version = "0.3.31"
default-features = false
features = ["alloc", "async-await"]

[dependencies.jsonwebtoken]
version = "10.2.0"
default-features = false
features = ["rust_crypto", "use_pem"]

[dependencies.k8s-openapi]
workspace = true

[dependencies.kube]
workspace = true

[features]
default = ["profiling"]
profiling = [
  "jemalloc_pprof",
  "pyroscope",
  "pyroscope_pprofrs",
  "tikv-jemallocator/profiling",
  "tikv-jemallocator/unprefixed_malloc_on_supported_platforms",
]
