[package]
name = "ksbh-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "ksbh_core"
path = "src/lib.rs"

[[bin]]
name = "generate_crd"
path = "src/bin/generate_crd.rs"

[dependencies]
pingora-core = "0.7.0"
pingora-http = "0.7.0"
lazy_static = "1.5.0"
libloading = "0.9.0"
log = "0.4"
notify = "8.0.0"
prometheus = "0.13.4"
prometheus-static-metric = "0.5.1"
serde_yaml_bw = "2.4.1"
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.5.0"
psl = "2.1.198"

# KSBH
ksbh-types = { workspace = true }

# Workspace
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
hashbrown = { workspace = true }
http = { workspace = true }
redis = { workspace = true }
rmp-serde = { workspace = true }
scc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smol_str = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
urlencoding = { workspace = true }

[dependencies.config]
version = "0.15.21"

[dependencies.cookie]
version = "0.18.1"
default-features = false
features = ["percent-encode", "secure"]

[dependencies.k8s-openapi]
workspace = true

[dependencies.kube]
workspace = true

[dependencies.redis-test]
version = "1.0.1"
optional = true

[dependencies.schemars]
workspace = true

[dev-dependencies]
ksbh-core = { path = ".", features = ["test-util"] }
ksbh-types = { path = "../ksbh-types/", features = ["test-util"] }
testfile = { workspace = true }
tokio-test = "0.4.4"
proptest = { workspace = true }
criterion = { workspace = true }

[features]
test-util = ["redis-test", "ksbh-types/test-util"]
