[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "tests"
path = "src/lib.rs"

[features]
bench = []

[dependencies]
ksbh-core = { path = "../ksbh-core", features = ["test-util"] }
ksbh-types = { path = "../ksbh-types", features = ["test-util"] }
test-context = "0.5.4"
tokio = { workspace = true }
hashbrown = { workspace = true }
pingora = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
ksbh-modules-sdk = { path = "../ksbh-modules-sdk" }
libloading = "0.8"
httptest = "0.15"
base64 = { workspace = true }
sha2 = { workspace = true }
rand = "0.8"
jsonwebtoken = { version = "10.2", default-features = false, features = ["rust_crypto"] }
urlencoding = "2.1"
rmp-serde = "1.1"
scc = "3.0"
digest = "0.10"
hex = "0.4"
httpmock = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3"

[dependencies.kube]
workspace = true

[dependencies.schemars]
workspace = true

[dependencies.k8s-openapi]
workspace = true

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
httptest = "0.15"
base64 = { workspace = true }
sha2 = { workspace = true }
rand = "0.8"
jsonwebtoken = { version = "10.2", default-features = false, features = ["rust_crypto"] }
urlencoding = "2.1"
rmp-serde = "1.1"
scc = "3.0"
digest = "0.10"
hex = "0.4"
httpmock = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3"
