[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "tests"
path = "src/lib.rs"

[features]
bench = []

[dependencies]
ksbh-core = { path = "../ksbh-core", features = ["test-util"] }
ksbh-types = { path = "../ksbh-types", features = ["test-util"] }
test-context = "0.5.4"
tokio = { workspace = true }
hashbrown = { workspace = true }
pingora = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
ksbh-modules-sdk = { path = "../ksbh-modules-sdk" }
libloading = { workspace = true }
httptest = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
jsonwebtoken = { workspace = true, default-features = false, features = ["rust_crypto"] }
urlencoding = { workspace = true }
rmp-serde = { workspace = true }
scc = { workspace = true }
digest = { workspace = true }
hex = { workspace = true }
httpmock = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
tempfile = { workspace = true }

[dependencies.kube]
workspace = true

[dependencies.schemars]
workspace = true

[dependencies.k8s-openapi]
workspace = true

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
httptest = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
jsonwebtoken = { workspace = true, default-features = false, features = ["rust_crypto"] }
urlencoding = { workspace = true }
rmp-serde = { workspace = true }
scc = { workspace = true }
digest = { workspace = true }
hex = { workspace = true }
httpmock = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
tempfile = { workspace = true }
