[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "tests"
path = "src/lib.rs"

[features]
bench = []

[dependencies]
ksbh-core = { path = "../ksbh-core", features = ["test-util"] }
ksbh-types = { path = "../ksbh-types", features = ["test-util"] }
test-context = "0.5.4"
tokio = { workspace = true }
hashbrown = { workspace = true }
pingora = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
ksbh-modules-sdk = { path = "../ksbh-modules-sdk" }
libloading = { workspace = true }
httptest = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
jsonwebtoken = { workspace = true, default-features = false, features = ["rust_crypto"] }
urlencoding = { workspace = true }
rmp-serde = { workspace = true }
scc = { workspace = true }
digest = { workspace = true }
hex = { workspace = true }
httpmock = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
tempfile = { workspace = true }
rcgen = "0.13.2"

[dependencies.kube]
workspace = true

[dependencies.schemars]
workspace = true

[dependencies.k8s-openapi]
workspace = true

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
httptest = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
jsonwebtoken = { workspace = true, default-features = false, features = ["rust_crypto"] }
urlencoding = { workspace = true }
rmp-serde = { workspace = true }
scc = { workspace = true }
digest = { workspace = true }
hex = { workspace = true }
httpmock = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
tempfile = { workspace = true }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
futures-util = "0.3.31"
native-tls = { version = "0.2.12", features = ["alpn"] }
tokio-native-tls = "0.3.1"
h2 = "0.4.13"
