[package]
name = "http_to_https"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes = { workspace = true }
http = { workspace = true }
tracing = { workspace = true }

# KSBH
ksbh-modules-sdk = { path = "../../ksbh-modules-sdk/" }
ksbh-core = { path = "../../ksbh-core/" }
