[package]
name = "oidc"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
hashbrown = { workspace = true }
http = { workspace = true }
ksbh-types = { workspace = true }
rmp-serde = { workspace = true }
scc = { workspace = true }
serde = { workspace = true }
smol_str = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Internal
ksbh-core = { path = "../../ksbh-core/" }
ksbh-modules-sdk = { path = "../../ksbh-modules-sdk/" }

[dependencies.jsonwebtoken]
version = "10.2.0"
default-features = false
features = ["rust_crypto", "use_pem"]

[dependencies.openidconnect]
version = "4.0.1"
default-features = false
features = ["reqwest-blocking", "rustls-tls", "timing-resistant-secret-traits"]

[dependencies.reqwest]
version = "0.12.13"
default-features = false
features = ["blocking", "json", "rustls-tls"]