[package]
name = "oidc"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
scc = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }

# KSBH
ksbh-modules-sdk = { path = "../../ksbh-modules-sdk/" }
ksbh-core = { path = "../../ksbh-core/" }
ksbh-types = { workspace = true }


[dependencies.jsonwebtoken]
workspace = true
default-features = false
features = ["rust_crypto", "use_pem"]

[dependencies.openidconnect]
version = "4.0.1"
default-features = false
features = ["reqwest-blocking", "rustls-tls", "timing-resistant-secret-traits"]

[dependencies.reqwest]
workspace = true
default-features = false
features = ["blocking", "json", "rustls-tls"]
