[package]
name = "proof-of-work"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
askama = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }

# KSBH
ksbh-modules-sdk = { path = "../../ksbh-modules-sdk/" }
ksbh-core = { path = "../../ksbh-core/" }
ksbh-ui = { path = "../../ksbh-ui/" }
