[package]
name = "dynamic-ffi-smoke"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes = { workspace = true }
http = { workspace = true }
ksbh-core = { path = "../../../ksbh-core/" }
ksbh-modules-sdk = { path = "../../../ksbh-modules-sdk/" }
tracing = { workspace = true }
